--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".SecondScreen"
+            android:label="Get started"
+            android:theme="@style/AppTheme" />
+
+        <activity android:name=".ThirdScreen"
+            android:label="Make Story"
+            android:theme="@style/AppTheme" />
+
     </application>
 
 </manifest>
