--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".Start"
-            android:label="@string/app_name"
+            android:label="start"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,13 +19,23 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".SecondScreen"
-            android:label="Get started"
-            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".choosestory"
+            android:label="choose story"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
-        <activity android:name=".ThirdScreen"
+        <activity
+            android:name=".choosewords"
+            android:label="Get started"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
+        <activity
+            android:name=".storyscreen"
             android:label="Make Story"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
     </application>
 
